# oj

./: .env  .gitignore  Cargo.toml  README.md  grade-lab-xx  gradelib.py  rust-toolchain.toml
docs/: test_platform_design.md
sql/sessions/: clear_by_user_id.sql  create.sql  create_table.sql  delete_by_id.sql  get_by_id.sql
sql/test_results/: create.sql  create_table.sql  update_result.sql  update_status.sql
sql/uploads/: create_table.sql  get_all_uploads.sql  get_user_uploads.sql  record_upload.sql
sql/users/: check_admin_exists.sql  check_user_exists.sql  create.sql  create_table.sql  get_all.sql  get_by_id.sql  get_by_username.sql  insert_default_admin.sql  insert_default_user.sql  update_role.sql
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs  templates.rs  tester.rs
src/handler/: admin.rs  auth.rs  files.rs  mod.rs  test_results.rs  upload.rs
static/: style.css
templates/: admin_panel.html  admin_panel_error.html  admin_panel_user_row.html  alert_redirect.html  files_list.html  files_list_empty.html  files_list_row.html  files_list_table.html  index.html  index_admin_link.html  index_error.html  login.html  login_error.html  message.html  test_results_detail.html  test_results_list.html  test_results_list_empty.html  test_results_list_row.html  test_results_list_table.html  upload_page.html  uploads.html  uploads_empty.html  uploads_error.html  uploads_table_row.html
uploads/akseven/: riscv_page_table.md
uploads/akseven/extracted/user/: test
uploads/regular/: “我和我的辅导员”主题征稿+《纸短情长》+崔行浩冉+15552117107.docx
