[package]
name = "axum-file-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.8.0"  # 尝试使用较旧但稳定的版本
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"